FEAR.Lang/Lang/IFEARParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from g:/PhD/Source/Research/FEAR/FEAR.Core/IFEARParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace FEAR {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class IFEARParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Break=1, Else=2, Var=3, Return=4, Void=5, Continue=6, For=7, Foreach=8, 
		While=9, With=10, Create=11, Collection=12, Append=13, Function_=14, If=15, 
		In=16, To=17, As=18, Of=19, New=20, EndL=21, EndB=22, Iri=23, Segment=24, 
		Define=25, Internal=26, Interpreter_=27, Collector=28, Codifier=29, Module=30, 
		Codify=31, Ontology=32, Entity=33, Property=34, Include=35, Identified=36, 
		By=37, Prefix_=38, Accepts=39, Search=40, Result=41, Required=42, Optional=43, 
		InterpreterSkip=44, OpenBracket=45, CloseBracket=46, OpenParen=47, CloseParen=48, 
		OpenBrace=49, CloseBrace=50, SemiColon=51, Comma=52, Assign=53, QuestionMark=54, 
		Colon=55, Dot=56, PlusPlus=57, MinusMinus=58, Plus=59, Minus=60, BitNot=61, 
		Not=62, Multiply=63, Divide=64, Modulus=65, LessThan=66, MoreThan=67, 
		LessThanEquals=68, GreaterThanEquals=69, Equals_=70, NotEquals=71, RightShiftArithmetic=72, 
		LeftShiftArithmetic=73, BitAnd=74, BitXOr=75, BitOr=76, And=77, Or=78, 
		Arrow=79, ColonColon=80, NULL_LITERAL=81, DECIMAL_LITERAL=82, HEX_LITERAL=83, 
		OCT_LITERAL=84, BINARY_LITERAL=85, FLOAT_LITERAL=86, HEX_FLOAT_LITERAL=87, 
		BOOL_LITERAL=88, CHAR_LITERAL=89, STRING_LITERAL=90, Whitespace=91, MultiLineComment=92, 
		SingleLineComment=93, Newline=94, UnexpectedCharacter=95, IDENTIFIER=96, 
		Object=97, TypeConversion=98;
	public const int
		RULE_program = 0, RULE_interpreter_source = 1, RULE_fieldDeclaration = 2, 
		RULE_variableDeclarators = 3, RULE_variableDeclaratorId = 4, RULE_statement = 5, 
		RULE_codify_line = 6, RULE_assignment_line = 7, RULE_assignment_action = 8, 
		RULE_assignment_function = 9, RULE_uri_identifier = 10, RULE_interpreter_definition = 11, 
		RULE_skipStatement = 12, RULE_interpreterStatement = 13, RULE_type_specifier = 14, 
		RULE_type_conversion = 15, RULE_interpreter_use = 16, RULE_stringLiteral = 17, 
		RULE_variable_reference = 18, RULE_numericLiteral = 19;
	public static readonly string[] ruleNames = {
		"program", "interpreter_source", "fieldDeclaration", "variableDeclarators", 
		"variableDeclaratorId", "statement", "codify_line", "assignment_line", 
		"assignment_action", "assignment_function", "uri_identifier", "interpreter_definition", 
		"skipStatement", "interpreterStatement", "type_specifier", "type_conversion", 
		"interpreter_use", "stringLiteral", "variable_reference", "numericLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'break'", "'else'", "'var'", "'return'", "'void'", "'continue'", 
		"'for'", "'foreach'", "'while'", "'with'", "'create'", "'collection'", 
		"'append'", "'function'", "'if'", "'in'", "'to'", "'as'", "'of'", "'new'", 
		"'L'", "'B'", "'iri'", "'segment'", "'define'", "'internal'", "'interpreter'", 
		"'collector'", "'codifier'", "'module'", "'codify'", "'ontology'", "'entity'", 
		"'property'", "'include'", "'identified'", "'by'", "'prefix'", "'accepts'", 
		"'search'", "'result'", "'required'", "'optional'", "'S'", "'['", "']'", 
		"'('", "')'", "'{'", "'}'", "';'", "','", "'='", "'?'", "':'", "'.'", 
		"'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'<'", 
		"'>'", "'<='", "'>='", "'=='", "'!='", "'>>'", "'<<'", "'&'", "'^'", "'|'", 
		"'&&'", "'||'", "'=>'", "'::'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Break", "Else", "Var", "Return", "Void", "Continue", "For", "Foreach", 
		"While", "With", "Create", "Collection", "Append", "Function_", "If", 
		"In", "To", "As", "Of", "New", "EndL", "EndB", "Iri", "Segment", "Define", 
		"Internal", "Interpreter_", "Collector", "Codifier", "Module", "Codify", 
		"Ontology", "Entity", "Property", "Include", "Identified", "By", "Prefix_", 
		"Accepts", "Search", "Result", "Required", "Optional", "InterpreterSkip", 
		"OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
		"CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "Colon", 
		"Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", 
		"Divide", "Modulus", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", 
		"Equals_", "NotEquals", "RightShiftArithmetic", "LeftShiftArithmetic", 
		"BitAnd", "BitXOr", "BitOr", "And", "Or", "Arrow", "ColonColon", "NULL_LITERAL", 
		"DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", 
		"HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
		"Whitespace", "MultiLineComment", "SingleLineComment", "Newline", "UnexpectedCharacter", 
		"IDENTIFIER", "Object", "TypeConversion"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "IFEARParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static IFEARParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public IFEARParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public IFEARParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Interpreter_definitionContext interpreter_definition() {
			return GetRuleContext<Interpreter_definitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Interpreter_sourceContext interpreter_source() {
			return GetRuleContext<Interpreter_sourceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(IFEARParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			interpreter_definition();
			State = 41;
			interpreter_source();
			State = 42;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Interpreter_sourceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public Interpreter_sourceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_interpreter_source; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInterpreter_source(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Interpreter_sourceContext interpreter_source() {
		Interpreter_sourceContext _localctx = new Interpreter_sourceContext(Context, State);
		EnterRule(_localctx, 2, RULE_interpreter_source);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17594534854656L) != 0) || _la==IDENTIFIER) {
				{
				{
				State = 44;
				statement();
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Internal() { return GetToken(IFEARParser.Internal, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclaratorsContext variableDeclarators() {
			return GetRuleContext<VariableDeclaratorsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemiColon() { return GetToken(IFEARParser.SemiColon, 0); }
		public FieldDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFieldDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldDeclarationContext fieldDeclaration() {
		FieldDeclarationContext _localctx = new FieldDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_fieldDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			Match(Internal);
			State = 51;
			variableDeclarators();
			State = 52;
			Match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclaratorsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclaratorIdContext[] variableDeclaratorId() {
			return GetRuleContexts<VariableDeclaratorIdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclaratorIdContext variableDeclaratorId(int i) {
			return GetRuleContext<VariableDeclaratorIdContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(IFEARParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(IFEARParser.Comma, i);
		}
		public VariableDeclaratorsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclarators; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclarators(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclaratorsContext variableDeclarators() {
		VariableDeclaratorsContext _localctx = new VariableDeclaratorsContext(Context, State);
		EnterRule(_localctx, 6, RULE_variableDeclarators);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			variableDeclaratorId();
			State = 59;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 55;
				Match(Comma);
				State = 56;
				variableDeclaratorId();
				}
				}
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclaratorIdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(IFEARParser.IDENTIFIER, 0); }
		public VariableDeclaratorIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclaratorId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclaratorId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclaratorIdContext variableDeclaratorId() {
		VariableDeclaratorIdContext _localctx = new VariableDeclaratorIdContext(Context, State);
		EnterRule(_localctx, 8, RULE_variableDeclaratorId);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Interpreter_useContext interpreter_use() {
			return GetRuleContext<Interpreter_useContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Codify_lineContext codify_line() {
			return GetRuleContext<Codify_lineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FieldDeclarationContext fieldDeclaration() {
			return GetRuleContext<FieldDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InterpreterStatementContext interpreterStatement() {
			return GetRuleContext<InterpreterStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SkipStatementContext skipStatement() {
			return GetRuleContext<SkipStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assignment_lineContext assignment_line() {
			return GetRuleContext<Assignment_lineContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_statement);
		try {
			State = 70;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64;
				interpreter_use();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 65;
				codify_line();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 66;
				fieldDeclaration();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 67;
				interpreterStatement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 68;
				skipStatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 69;
				assignment_line();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Codify_lineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Codify() { return GetToken(IFEARParser.Codify, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Variable_referenceContext variable_reference() {
			return GetRuleContext<Variable_referenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode As() { return GetToken(IFEARParser.As, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemiColon() { return GetToken(IFEARParser.SemiColon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Object() { return GetToken(IFEARParser.Object, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Property() { return GetToken(IFEARParser.Property, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Uri_identifierContext[] uri_identifier() {
			return GetRuleContexts<Uri_identifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Uri_identifierContext uri_identifier(int i) {
			return GetRuleContext<Uri_identifierContext>(i);
		}
		public Codify_lineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_codify_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCodify_line(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Codify_lineContext codify_line() {
		Codify_lineContext _localctx = new Codify_lineContext(Context, State);
		EnterRule(_localctx, 12, RULE_codify_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			Match(Codify);
			State = 73;
			_la = TokenStream.LA(1);
			if ( !(_la==Property || _la==Object) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 74;
			variable_reference();
			State = 75;
			Match(As);
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 76;
				uri_identifier();
				}
				}
				State = 79;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Colon );
			State = 81;
			Match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assignment_lineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Variable_referenceContext variable_reference() {
			return GetRuleContext<Variable_referenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Assign() { return GetToken(IFEARParser.Assign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Assignment_actionContext assignment_action() {
			return GetRuleContext<Assignment_actionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemiColon() { return GetToken(IFEARParser.SemiColon, 0); }
		public Assignment_lineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment_line(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Assignment_lineContext assignment_line() {
		Assignment_lineContext _localctx = new Assignment_lineContext(Context, State);
		EnterRule(_localctx, 14, RULE_assignment_line);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			variable_reference();
			State = 84;
			Match(Assign);
			State = 85;
			assignment_action();
			State = 86;
			Match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assignment_actionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Variable_referenceContext variable_reference() {
			return GetRuleContext<Variable_referenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumericLiteralContext numericLiteral() {
			return GetRuleContext<NumericLiteralContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StringLiteralContext stringLiteral() {
			return GetRuleContext<StringLiteralContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assignment_functionContext assignment_function() {
			return GetRuleContext<Assignment_functionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assignment_actionContext assignment_action() {
			return GetRuleContext<Assignment_actionContext>(0);
		}
		public Assignment_actionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment_action; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment_action(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Assignment_actionContext assignment_action() {
		Assignment_actionContext _localctx = new Assignment_actionContext(Context, State);
		EnterRule(_localctx, 16, RULE_assignment_action);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				{
				State = 88;
				variable_reference();
				}
				break;
			case Minus:
			case DECIMAL_LITERAL:
				{
				State = 89;
				numericLiteral();
				}
				break;
			case STRING_LITERAL:
				{
				State = 90;
				stringLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Plus || _la==Minus) {
				{
				State = 93;
				assignment_function();
				State = 94;
				assignment_action();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assignment_functionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Plus() { return GetToken(IFEARParser.Plus, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Minus() { return GetToken(IFEARParser.Minus, 0); }
		public Assignment_functionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment_function; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment_function(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Assignment_functionContext assignment_function() {
		Assignment_functionContext _localctx = new Assignment_functionContext(Context, State);
		EnterRule(_localctx, 18, RULE_assignment_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			_la = TokenStream.LA(1);
			if ( !(_la==Plus || _la==Minus) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Uri_identifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Colon() { return GetToken(IFEARParser.Colon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(IFEARParser.IDENTIFIER, 0); }
		public Uri_identifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_uri_identifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUri_identifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Uri_identifierContext uri_identifier() {
		Uri_identifierContext _localctx = new Uri_identifierContext(Context, State);
		EnterRule(_localctx, 20, RULE_uri_identifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 100;
			Match(Colon);
			State = 101;
			Match(IDENTIFIER);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Interpreter_definitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Define() { return GetToken(IFEARParser.Define, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Interpreter_() { return GetToken(IFEARParser.Interpreter_, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenParen() { return GetToken(IFEARParser.OpenParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StringLiteralContext[] stringLiteral() {
			return GetRuleContexts<StringLiteralContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StringLiteralContext stringLiteral(int i) {
			return GetRuleContext<StringLiteralContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(IFEARParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(IFEARParser.Comma, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseParen() { return GetToken(IFEARParser.CloseParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemiColon() { return GetToken(IFEARParser.SemiColon, 0); }
		public Interpreter_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_interpreter_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIFEARParserVisitor<TResult> typedVisitor = visitor as IIFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInterpreter_definition(this);
			else return visitor.VisitChildren(this);
		}
	}
